frontend/test/should_pass/iterated_replParameter.grg
rule r {
	iterated {
		y:Node;
		modify {
			x --> y;
		}
	}
	
	modify {
		x:Node;
	}
}

rule r2 {
	iterated {
		y:Node;
		p:pat();
		modify {
			z:Node;
			p(x,y,z);
		}
	}
	
	modify {
		x:Node;
	}
}

rule r3 {
	iterated {
		y:Node;
		p:pat();
		modify {
			z:Node;
			x;
			p(x,y,z);
		}
	}
	
	modify {
		x:Node;
	}
}

pattern pat modify(x:Node, y:Node, z:Node)
{
	modify {
		x --> y <-- z;
	}
}
