frontend/test/should_fail/delretypesame_004.grg
rule r{	n:Node;	p:P(n);		modify {		delete(n);		p();	}}pattern P(n:Node){	modify {		m:Node<n>;	}}